# my-research-assistant

./: .gitignore  CLAUDE.md  DEVELOPMENT_WORKFLOW.md  README.md  devlog.md  envrc.template  plan.md  pyproject.toml
.claude/agents/: design-implementer.md  doc-maintainer.md  qa-engineer.md  self-improver.md
designs/: TEMPLATE.md  command-arguments.md  command-types.md  constants.md  dispatcher-agent-command-design.md  error-handling-and-logging.md  file-store.md  find-command.md  improve-command.md  improved-pagination.md  open-command.md  remove-paper-command.md  research-command.md  search-tester.md  single-level-workflow-state-machine.md  two-level-workflow-state-machine.md  user-stores.md  validate-command.md  workflow-state-machine-and-commands.md
docs/: .gitignore
src/my_research_assistant/: __init__.py  arxiv_downloader.py  chat.py  check_models.py  constants.py  file_locations.py  google_search.py  interface_adapter.py  logging_config.py  models.py  pagination.py  paper_manager.py  paper_removal.py  pdf_image_extractor.py  project_types.py  prompt.py  reindex_paper.py  result_storage.py  search_tester.py  state_machine.py  summarizer.py  types.py  validate_store.py  vector_store.py  workflow.py  workflow_add_paper.py
src/my_research_assistant/prompts/: base-summary-v1.md  base-summary-v2.md  improve-research-v1.md  improve-search-v1.md  improve-summary-v1.md  improve-summary-v2.md  research_synthesis_v1.md
tests/: TESTING_SUMMARY.md  conftest.py  test_chat.py  test_download_and_index.py  test_find_command_e2e.py  test_find_ordering.py  test_google_search.py  test_list_summary_ordering.py  test_logging_config.py  test_models.py  test_open_command.py  test_pagination.py  test_pagination_integration.py  test_paper_argument_parsing.py  test_paper_removal.py  test_pdf_image_extractor.py  test_prompt.py  test_research_integration.py  test_research_workflow.py  test_search_arxiv_papers.py  test_search_tester.py  test_semantic_search_fix.py  test_state_machine.py  test_state_machine_ordering.py  test_summarizer.py  test_validate_store.py  test_validate_store_integration.py  test_vector_store_notes.py  test_vector_store_rebuild.py  test_vector_store_search.py  test_workflow.py
utils/: analyze_sessions.py  extract_all_session_prompts.py  extract_claude_session_prompts.py
