[project]
name = "my-research-assistant"
version = "0.1.0"
description = "Agentic research assistant, focused on Arxiv papers"
readme = "README.md"
authors = [
    { name = "Jeff Fischer" }
]
requires-python = ">=3.12"
dependencies = [
    "arxiv>=2.2.0",
    "chromadb>=1.0.16",
    "llama-index>=0.13.0",
    "llama-index-vector-stores-chroma>=0.5.0",
    "mcp>=1.12.3",
    "numpy>=2.3.2",
    "pillow>=11.3.0",
    "pydantic>=2.11.7",
    "pymupdf>=1.26.3",
    "reportlab>=4.4.3",
    "rich>=14.1.0",
]

[project.scripts]
my-research-assistant = "my_research_assistant:main"
chat = "my_research_assistant.chat:main"
rebuild-index = "my_research_assistant.vector_store:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
]
